# chris-jason-test

./: CLAUDE.md  README.md  in-depth-readme.md  pyproject.toml
ai/: AI-CONTEXT-BRIEF.md
ai/decided/: refactoring-in-depth-readme-example_v3.3.md  refactoring-readme-example_v3.3.md  script-in-depth-readme-example_v3.3.md  script-readme-example_v3.3.md  txo-ai-adr_v3.3.md  txo-business-adr_v3.3.md  txo-technical-standards_v3.2.md  utils-quick-reference_v3.2.md
ai/decided/old/: in-depth-readme-example_v3.2.md  readme-example_v3.2.md
ai/old/: PROJECT-STATUS_v3.2.md
ai/prompts/: README.md  large-refactoring-workflow_v3.3.md  refactoring-ai-prompt_v3.3.md  script-ai-prompt-template_v3.3.md
ai/prompts/old/: refactoring-xml-ai-prompt-v3.0.xml.md
ai/reports/: github-tagging-guide.md  release-notes-v3.3.md
ai/reports/old/: refactor_v3.2.md
data/: dudes-data.json  dudes-nonthly-avg.json
schemas/: org-env-config-schema.json
src/: Date_month.py  Loop-test.py  read_jason.py  try_me_script.py
tests/: test_async_operation_wrapper.py  test_circuit_breaker_enhanced.py  test_logger_strict_mode.py  test_rate_limiter_adaptive.py
utils/: api_common.py  api_factory.py  exceptions.py  load_n_save.py  logger.py  oauth_helpers.py  path_helpers.py  rate_limit_manager.py  rest_api_helpers.py  script_runner.py  validate_tko_compliance.py
