[project]
name = "txo-python-template"
version = "0.1.0"
description = "Tentixo's default project structure and helper files"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.2",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "jsonschema>=4.25.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests==2.32.5",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "xai-sdk>=1.3.1",
]
